Thu Apr 27 11:01:48 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* Makefile.in (do-tar-bz2, do-md5sum): Skip CVS directories when
 	building file lists.

Wed Apr 26 17:03:53 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* Makefile.in (do-djunpack): New target. Update djunpack.bat with
 	current version information.  Add to proto-toplev directory.
	(gdb-taz): Build do-djunpack.

2000-04-23  Eli Zaretskii  <eliz@is.elta.co.il>

	* djunpack.bat: New file.

Wed Apr 19 12:46:26 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* Makefile.in (taz, gdb-taz, gas.tar.bz2, binutils.tar.bz2,
 	gas+binutils.tar.bz2, libg++.tar.bz2, gnats.tar.bz2, gdb.tar.bz2,
 	dejagnu.tar.bz2, gdb+dejagnu.tar.bz2, insight.tar.bz2,
 	insight+dejagnu.tar.bz2, newlib.tar.bz2): Pass MD5PROG to sub-make.

Wed Apr 12 16:42:48 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* Makefile.in (gdb-taz): New target.  GDB specific archive.
	(do-md5sum): New target.
	(MD5PROG): Define.
	(PACKAGE): Default to TOOL.
	(VER): Default to a shell script.
	(taz): Rewrite target.  Move real work to do-proto-toplev.  Include
 	md5 checksum generation.
	(do-proto-toplev): New target. Create $(PACKAGE)-$(VER) link.
	(do-tar-bz2): Delete creation of $(PACKAGE)-$(VER) link.
	(gdb.tar.bz2, dejagnu.tar.bz2, gdb+dejagnu.tar.bz2,
 	insight.tar.bz2): Use gdb-taz to create archive.

Fri Apr  7 18:10:29 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* configure (warn_cflags): Delete.

2000-03-30  Christopher Faylor  <cgf@cygnus.com>

	* Makefile.in (CC_FOR_TARGET): Add new winsup directory
	structure stuff to -L library search.
	(CXX_FOR_TARGET): Ditto.

2000-03-29  Jason Merrill  <jason@casey.cygnus.com>

	* configure.in: -linux-gnu*, not -linux-gnu.

2000-03-10  H.J. Lu  <hjl@gnu.org>

	* Makefile.in (all-gcc): Backed out the last change.

2000-03-10  H.J. Lu  <hjl@gnu.org>

	* Makefile.in (all-gcc): Run ld/ld-new if necessary.

Fri Mar  3 18:44:08 2000  Andrew Cagney  <cagney@b1.cygnus.com>
