@@ -1,0 +1,179 @@
+@V@/gdb/ChangeLog-3.x @V@/gdb/ChangeLog.3-x
+@V@/gdb/ChangeLog-9091 @V@/gdb/ChangeLog.9091
+@V@/gdb/ChangeLog-92 @V@/gdb/ChangeLog.92
+@V@/gdb/ChangeLog-93 @V@/gdb/ChangeLog.93
+@V@/gdb/ChangeLog-94 @V@/gdb/ChangeLog.94
+@V@/gdb/ChangeLog-95 @V@/gdb/ChangeLog.95
+@V@/gdb/ChangeLog-96 @V@/gdb/ChangeLog.96
+@V@/gdb/ChangeLog-97 @V@/gdb/ChangeLog.97
+@V@/gdb/ChangeLog-98 @V@/gdb/ChangeLog.98
+@V@/gdb/ChangeLog-99 @V@/gdb/ChangeLog.99
+@V@/gdb/ppc-linux-tdep.c @V@/gdb/ppc-linx-tdep.c
+@V@/gdb/remote-adapt.c @V@/gdb/rmt-adapt.c
+@V@/gdb/remote-array.c @V@/gdb/rmt-array.c
+@V@/gdb/remote-e7000.c @V@/gdb/rmt-e7000.c
+@V@/gdb/remote-eb.c @V@/gdb/rmt-eb.c
+@V@/gdb/remote-es.c @V@/gdb/rmt-es.c
+@V@/gdb/remote-est.c @V@/gdb/rmt-est.c
+@V@/gdb/remote-mips.c @V@/gdb/emt-mips.c
+@V@/gdb/remote-mm.c @V@/gdb/emt-mm.c
+@V@/gdb/remote-nindy.c @V@/gdb/rmt-nindy.c
+@V@/gdb/remote-nrom.c @V@/gdb/rmt-nrom.c
+@V@/gdb/remote-rdi.c @V@/gdb/rmt-rdi.c
+@V@/gdb/remote-rdp.c @V@/gdb/rmt-rdp.c
+@V@/gdb/remote-sds.c @V@/gdb/rmt-sds.c
+@V@/gdb/remote-sim.c @V@/gdb/rmt-sim.c
+@V@/gdb/remote-st.c @V@/gdb/rmt-st.c
+@V@/gdb/remote-udi.c @V@/gdb/rmt-udi.c
+@V@/gdb/remote-vx.c @V@/gdb/rmt-vx.c
+@V@/gdb/remote-vx29k.c @V@/gdb/rmt-vx29k.c
+@V@/gdb/remote-vx68.c @V@/gdb/rmt-vx68.c
+@V@/gdb/remote-vx960.c @V@/gdb/rmt-vx960.c
+@V@/gdb/remote-vxmips.c @V@/gdb/rmt-vxmips.c
+@V@/gdb/remote-vxsparc.c @V@/gdb/rmt-vxsparc.c
+@V@/gdb/sparclet-rom.c @V@/gdb/splet-rom.c
+@V@/gdb/sparclet-stub.c @V@/gdb/splet-stub.c
+@V@/gdb/i386-linux-tdep.c @V@/gdb/i386linux-tdep.c
+@V@/gdb/arm-linux-tdep.c @V@/gdb/armlin-tdep.c
+@V@/gdb/arm-linux-nat.c @V@/gdb/armlin-nat.c
+@V@/gdb/config/alpha/alpha-osf1.mh @V@/gdb/config/alpha/alphosf1.mh
+@V@/gdb/config/alpha/alpha-osf2.mh @V@/gdb/config/alpha/alphosf2.mh
+@V@/gdb/config/alpha/alpha-osf3.mh @V@/gdb/config/alpha/alphosf3.mh
+@V@/gdb/config/alpha/tm-alphalinux.h @V@/gdb/config/alpha/tm-alplinux.h
+@V@/gdb/config/alpha/xm-alphalinux.h @V@/gdb/config/alpha/xm-alplinux.h
+@V@/gdb/config/i386/nm-i386sco4.h @V@/gdb/config/i386/nm-sco4.h
+@V@/gdb/config/i386/nm-i386sco5.h @V@/gdb/config/i386/nm-sco5.h
+@V@/gdb/config/i386/nm-i386sol2.h @V@/gdb/config/i386/nm-sol2.h
+@V@/gdb/config/i386/nm-i386v4.h @V@/gdb/config/i386/nm-v4.h
+@V@/gdb/config/i386/nm-i386v42mp.h @V@/gdb/config/i386/nm-v42mp.h
+@V@/gdb/config/i386/tm-i386mk.h @V@/gdb/config/i386/tm-mk.h
+@V@/gdb/config/i386/tm-i386sol2.h @V@/gdb/config/i386/tm-sol2.h
+@V@/gdb/config/i386/tm-i386v4.h @V@/gdb/config/i386/tm-v4.h
+@V@/gdb/config/i386/tm-i386v42mp.h @V@/gdb/config/i386/tm-v42mp.h
+@V@/gdb/config/i386/xm-i386mach.h @V@/gdb/config/i386/xm-mach.h
+@V@/gdb/config/i386/xm-i386mk.h @V@/gdb/config/i386/xm-mk.h
+@V@/gdb/config/i386/xm-i386v32.h @V@/gdb/config/i386/xm-v32.h
+@V@/gdb/config/i386/xm-i386v4.h @V@/gdb/config/i386/xm-v4.h
+@V@/gdb/config/m68k/apollo68v.mh @V@/gdb/config/m68k/apollo-v.mh
+@V@/gdb/config/m68k/nm-apollo68v.h @V@/gdb/config/m68k/nm-apolv.h
+@V@/gdb/config/m68k/nm-hp300hpux.h @V@/gdb/config/m68k/nm-300ux.h
+@V@/gdb/config/m68k/tm-hp300hpux.h @V@/gdb/config/m68k/tm-300ux.h
+@V@/gdb/config/m68k/xm-apollo68v.h @V@/gdb/config/m68k/xm-apolv.h
+@V@/gdb/config/m68k/xm-hp300hpux.h @V@/gdb/config/m68k/xm-300ux.h
+@V@/gdb/config/m88k/tm-delta88v4.h @V@/gdb/config/m88k/tm-d88v4.h
+@V@/gdb/config/m88k/xm-delta88v4.h @V@/gdb/config/m88k/xm-d88v4.h
+@V@/gdb/config/mips/tm-bigmips64.h @V@/gdb/config/mips/tm-bigm64.h
+@V@/gdb/config/mips/tm-embed64.h @V@/gdb/config/mips/tm-emb64.h
+@V@/gdb/config/mips/tm-embedl.h @V@/gdb/config/mips/tm-embdl.h
+@V@/gdb/config/mips/tm-embedl64.h @V@/gdb/config/mips/tm-embl64.h
+@V@/gdb/config/mips/tm-vr4300el.h @V@/gdb/config/mips/tm-v43el.h
+@V@/gdb/config/mips/tm-vr4xxxel.h @V@/gdb/config/mips/tm-v4xel.h
+@V@/gdb/config/mips/tm-vr5000el.h @V@/gdb/config/mips/tm-vr5kel.h
+@V@/gdb/config/pa/nm-hppah11.h @V@/gdb/config/pa/nm-hppa11.h
+@V@/gdb/config/powerpc/tm-ppcle-sim.h @V@/gdb/config/powerpc/tm-ppcl-sim.h
+@V@/gdb/config/rs6000/nm-rs6000ly.h @V@/gdb/config/rs6000/nm-rs6kly.h
+@V@/gdb/config/rs6000/tm-rs6000.h @V@/gdb/config/rs6000/tm-rs6k.h
+@V@/gdb/config/rs6000/tm-rs6000ly.h @V@/gdb/config/rs6000/tm-rs6kly.h
+@V@/gdb/config/rs6000/xm-rs6000ly.h @V@/gdb/config/rs6000/xm-rs6kly.h
+@V@/gdb/config/sparc/tm-sparclet.h @V@/gdb/config/sparc/tm-splet.h
+@V@/gdb/config/sparc/tm-sparclite.h @V@/gdb/config/sparc/tm-splite.h
+@V@/gdb/config/sparc/tm-sparclynx.h @V@/gdb/config/sparc/tm-splynx.h
+@V@/gdb/config/sparc/xm-sparclynx.h @V@/gdb/config/sparc/xm-xplynx.h
+@V@/gdb/config/vax/xm-vaxult2.h @V@/gdb/config/vax/xm-vaxut2.h
+@V@/gdb/gdbtk/generic/gdbtk-varobj.c @V@/gdb/gdbtk/generic/gdbtk-vobj.c
+@V@/gdb/osf-share/cma_stack_int.h @V@/gdb/osf-share/cma_stkint.h
+@V@/gdb/testsuite/gdb.base/coremaker2.c @V@/gdb/testsuite/gdb.base/core2maker.c
+@V@/gdb/tui/tuiSourceWin.c @V@/gdb/tui/tuiWinSource.c
+@V@/gdb/tui/tuiSourceWin.h @V@/gdb/tui/tuiWinSource.h
+@V@/bfd/ChangeLog-9193 @V@/bfd/ChangeLog.9193
+@V@/bfd/ChangeLog-9495 @V@/bfd/ChangeLog.9495
+@V@/bfd/ChangeLog-9697 @V@/bfd/ChangeLog.9697
+@V@/bfd/coff-tic80.c @V@/bfd/coff-tc80.c
+@V@/sim/mips/dv-tx3904irc.c @V@/sim/mips/dv-tx3irc.c
+@V@/sim/mips/dv-tx3904sio.c @V@/sim/mips/dv-tx3sio.c
+@V@/sim/mips/dv-tx3904tmr.c @V@/sim/mips/dv-tx3tmr.c
+@V@/sim/mn10300/dv-mn103int.c @V@/sim/mn10300/dv-mn1int.c
+@V@/sim/mn10300/dv-mn103iop.c @V@/sim/mn10300/dv-mn1iop.c
+@V@/sim/mn10300/dv-mn103ser.c @V@/sim/mn10300/dv-mn1ser.c
+@V@/sim/mn10300/dv-mn103tim.c @V@/sim/mn10300/dv-mn1tim.c
+@V@/sim/ppc/corefile-n.h @V@/sim/ppc/corefle-n.h
+@V@/sim/ppc/idecode_branch.h @V@/sim/ppc/idec_branch.h
+@V@/sim/ppc/idecode_expression.h @V@/sim/ppc/idec_expression.h
+@V@/sim/ppc/idecode_fields.h @V@/sim/ppc/idec_fields.h
+@V@/sim/ppc/sim-endian-n.h @V@/sim/ppc/sim-endn.h
+@V@/sim/testsuite/d10v-elf/t-ae-ld-d.s @V@/sim/testsuite/d10v-elf/t-ld-d.s
+@V@/sim/testsuite/d10v-elf/t-ae-ld-i.s @V@/sim/testsuite/d10v-elf/t-ld-i.s
+@V@/sim/testsuite/d10v-elf/t-ae-ld-id.s @V@/sim/testsuite/d10v-elf/t-ld-id.s
+@V@/sim/testsuite/d10v-elf/t-ae-ld-im.s @V@/sim/testsuite/d10v-elf/t-ld-im.s
+@V@/sim/testsuite/d10v-elf/t-ae-ld-ip.s @V@/sim/testsuite/d10v-elf/t-ld-ip.s
+@V@/sim/testsuite/d10v-elf/t-ae-ld2w-d.s @V@/sim/testsuite/d10v-elf/t-ld2-d.s
+@V@/sim/testsuite/d10v-elf/t-ae-ld2w-i.s @V@/sim/testsuite/d10v-elf/t-ld2-i.s
+@V@/sim/testsuite/d10v-elf/t-ae-ld2w-id.s @V@/sim/testsuite/d10v-elf/t-ld2-id.s
+@V@/sim/testsuite/d10v-elf/t-ae-ld2w-im.s @V@/sim/testsuite/d10v-elf/t-ld2-im.s
+@V@/sim/testsuite/d10v-elf/t-ae-ld2w-ip.s @V@/sim/testsuite/d10v-elf/t-ld2-ip.s
+@V@/sim/testsuite/d10v-elf/t-ae-st-d.s @V@/sim/testsuite/d10v-elf/t-st-d.s
+@V@/sim/testsuite/d10v-elf/t-ae-st-i.s @V@/sim/testsuite/d10v-elf/t-st-i.s
+@V@/sim/testsuite/d10v-elf/t-ae-st-id.s @V@/sim/testsuite/d10v-elf/t-st-id.s
+@V@/sim/testsuite/d10v-elf/t-ae-st-im.s @V@/sim/testsuite/d10v-elf/t-st-im.s
+@V@/sim/testsuite/d10v-elf/t-ae-st-ip.s @V@/sim/testsuite/d10v-elf/t-st-ip.s
+@V@/sim/testsuite/d10v-elf/t-ae-st-is.s @V@/sim/testsuite/d10v-elf/t-st-is.s
+@V@/sim/testsuite/d10v-elf/t-ae-st2w-d.s @V@/sim/testsuite/d10v-elf/t-st2-d.s
+@V@/sim/testsuite/d10v-elf/t-ae-st2w-i.s @V@/sim/testsuite/d10v-elf/t-st2-i.s
+@V@/sim/testsuite/d10v-elf/t-ae-st2w-id.s @V@/sim/testsuite/d10v-elf/t-st2-id.s
+@V@/sim/testsuite/d10v-elf/t-ae-st2w-im.s @V@/sim/testsuite/d10v-elf/t-st2-im.s
+@V@/sim/testsuite/d10v-elf/t-ae-st2w-ip.s @V@/sim/testsuite/d10v-elf/t-st2-ip.s
+@V@/sim/testsuite/d10v-elf/t-ae-st2w-is.s @V@/sim/testsuite/d10v-elf/t-st2-is.s
+@V@/sim/testsuite/d30v-elf/ls-ld4bhu.S @V@/sim/testsuite/d30v-elf/ls-ld4bu.S
+@V@/intl/po2tbl.sed.in @V@/intl/po2tblsed.in
+@V@/intl/intlh.inst.in @V@/intl/intlh_inst.in
+@V@/readline/config.h.in @V@/readline/config.h-in
+@V@/readline/config.h.bot @V@/readline/config.h-bot
+@V@/gdb/nindy-share/b.out.h @V@/gdb/nindy-share/b_out.h
+@V@/gdb/c-exp.tab.c @V@/gdb/c-exp_tab.c
+@V@/gdb/jv-exp.tab.c @V@/gdb/jv-exp_tab.c
+@V@/gdb/f-exp.tab.c @V@/gdb/f-exp_tab.c
+@V@/gdb/m2-exp.tab.c @V@/gdb/m2-exp_tab.c
+@V@/gdb/testsuite/gdb.c++ @V@/gdb/testsuite/gdb.cxx
+@V@/gdb/testsuite/gdb.c++/Makefile.in @V@/gdb/testsuite/gdb.cxx/Makefile.in
+@V@/gdb/testsuite/gdb.c++/ambiguous.cc @V@/gdb/testsuite/gdb.cxx/ambiguous.cc
+@V@/gdb/testsuite/gdb.c++/ambiguous.exp @V@/gdb/testsuite/gdb.cxx/ambiguous.exp
+@V@/gdb/testsuite/gdb.c++/annota2.cc @V@/gdb/testsuite/gdb.cxx/annota2.cc
+@V@/gdb/testsuite/gdb.c++/annota2.exp @V@/gdb/testsuite/gdb.cxx/annota2.exp
+@V@/gdb/testsuite/gdb.c++/anon-union.cc @V@/gdb/testsuite/gdb.cxx/anon-union.cc
+@V@/gdb/testsuite/gdb.c++/anon-union.exp @V@/gdb/testsuite/gdb.cxx/anon-union.exp
+@V@/gdb/testsuite/gdb.c++/classes.exp @V@/gdb/testsuite/gdb.cxx/classes.exp
+@V@/gdb/testsuite/gdb.c++/configure @V@/gdb/testsuite/gdb.cxx/configure
+@V@/gdb/testsuite/gdb.c++/configure.in @V@/gdb/testsuite/gdb.cxx/configure.in
+@V@/gdb/testsuite/gdb.c++/cplusfuncs.cc @V@/gdb/testsuite/gdb.cxx/cplusfuncs.cc
+@V@/gdb/testsuite/gdb.c++/cplusfuncs.exp @V@/gdb/testsuite/gdb.cxx/cplusfuncs.exp
+@V@/gdb/testsuite/gdb.c++/ctti.exp @V@/gdb/testsuite/gdb.cxx/ctti.exp
+@V@/gdb/testsuite/gdb.c++/cttiadd.cc @V@/gdb/testsuite/gdb.cxx/cttiadd.cc
+@V@/gdb/testsuite/gdb.c++/cttiadd1.cc @V@/gdb/testsuite/gdb.cxx/cttiadd1.cc
+@V@/gdb/testsuite/gdb.c++/cttiadd2.cc @V@/gdb/testsuite/gdb.cxx/cttiadd2.cc
+@V@/gdb/testsuite/gdb.c++/cttiadd3.cc @V@/gdb/testsuite/gdb.cxx/cttiadd3.cc
+@V@/gdb/testsuite/gdb.c++/demangle.exp @V@/gdb/testsuite/gdb.cxx/demangle.exp
+@V@/gdb/testsuite/gdb.c++/derivation.cc @V@/gdb/testsuite/gdb.cxx/derivation.cc
+@V@/gdb/testsuite/gdb.c++/derivation.exp @V@/gdb/testsuite/gdb.cxx/derivation.exp
+@V@/gdb/testsuite/gdb.c++/inherit.exp @V@/gdb/testsuite/gdb.cxx/inherit.exp
+@V@/gdb/testsuite/gdb.c++/local.cc @V@/gdb/testsuite/gdb.cxx/local.cc
+@V@/gdb/testsuite/gdb.c++/local.exp @V@/gdb/testsuite/gdb.cxx/local.exp
+@V@/gdb/testsuite/gdb.c++/member-ptr.cc @V@/gdb/testsuite/gdb.cxx/member-ptr.cc
+@V@/gdb/testsuite/gdb.c++/member-ptr.exp @V@/gdb/testsuite/gdb.cxx/member-ptr.exp
+@V@/gdb/testsuite/gdb.c++/method.cc @V@/gdb/testsuite/gdb.cxx/method.cc
+@V@/gdb/testsuite/gdb.c++/method.exp @V@/gdb/testsuite/gdb.cxx/method.exp
+@V@/gdb/testsuite/gdb.c++/misc.cc @V@/gdb/testsuite/gdb.cxx/misc.cc
+@V@/gdb/testsuite/gdb.c++/misc.exp @V@/gdb/testsuite/gdb.cxx/misc.exp
+@V@/gdb/testsuite/gdb.c++/overload.cc @V@/gdb/testsuite/gdb.cxx/overload.cc
+@V@/gdb/testsuite/gdb.c++/overload.exp @V@/gdb/testsuite/gdb.cxx/overload.exp
+@V@/gdb/testsuite/gdb.c++/ovldbreak.cc @V@/gdb/testsuite/gdb.cxx/ovldbreak.cc
+@V@/gdb/testsuite/gdb.c++/ovldbreak.exp @V@/gdb/testsuite/gdb.cxx/ovldbreak.exp
+@V@/gdb/testsuite/gdb.c++/ref-types.cc @V@/gdb/testsuite/gdb.cxx/ref-types.cc
+@V@/gdb/testsuite/gdb.c++/ref-types.exp @V@/gdb/testsuite/gdb.cxx/ref-types.exp
+@V@/gdb/testsuite/gdb.c++/templates.cc @V@/gdb/testsuite/gdb.cxx/templates.cc
+@V@/gdb/testsuite/gdb.c++/templates.exp @V@/gdb/testsuite/gdb.cxx/templates.exp
+@V@/gdb/testsuite/gdb.c++/userdef.cc @V@/gdb/testsuite/gdb.cxx/userdef.cc
+@V@/gdb/testsuite/gdb.c++/userdef.exp @V@/gdb/testsuite/gdb.cxx/userdef.exp
+@V@/gdb/testsuite/gdb.c++/virtfunc.cc @V@/gdb/testsuite/gdb.cxx/virtfunc.cc
+@V@/gdb/testsuite/gdb.c++/virtfunc.exp @V@/gdb/testsuite/gdb.cxx/virtfunc.exp
+@V@/gdb/testsuite/.gdbinit @V@/gdb/testsuite/gdb.ini
+@V@/sim/ppc/.gdbinit @V@/sim/ppc/gdb.ini
